--- a/src/main/resources/static/storekeeper_create_product.html
+++ b/src/main/resources/static/storekeeper_create_product.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Стартовая страница</title>
+  <title>ЛК кладовщика</title>
   <link rel="stylesheet" href="/css/common_for_lc_style.css"/>
   <link rel="stylesheet" href="/css/storekeeper_create_product.css" />
   <link
@@ -18,28 +18,24 @@
   <header>
     <div class="header-container">
       <a href="#" class="branding">
-        <img
-                src="imeg/label.png"
-                alt="logo"
-                style="width: 100px; height: 100px; border-radius: 50%"
-        />
+        <img class="img-logo" src="imeg/label.png" alt="logo"/>
       </a>
 
       <nav class="navigation">
         <a href="#">Регистрация товара</a>
-        <a href="#">Публикация новости</a>
+        <a href="in_development.html">Публикация новости</a>
       </nav>
 
-      <a href="#" class="notifications">Уведомления</a>
+      <a href="in_development.html" class="notifications">Уведомления</a>
 
-      <button class="auth-button">Профиль</button>
+      <button class="auth-button">Выйти</button>
     </div>
   </header>
 
   <main>
     <div class="sidebar">
       <a href="storekeeper_main.html">Профиль</a>
-      <a href="#">Склад</a>
+      <a href="storekeeper_storage.html">Склад</a>
       <a href="#">Контрагенты</a>
       <a href="#">Сотрудники</a>
       <a href="#">Календарь отгрузок</a>
@@ -86,11 +82,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <img
-                    src="imeg/label.png"
-                    alt="logo"
-                    style="width: 100px; height: 100px; border-radius: 50%"
-            />
+            <img class="img-logo" src="imeg/label.png" alt="logo"/>
             <a href="#" class="href-footer">РЯЗАНСКИЙ ТРУБНЫЙ ЗАВОД</a>
           </div>
           <div class="col-md-4">
