--- a/src/main/resources/static/client_catalog_products.html
+++ b/src/main/resources/static/client_catalog_products.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Стартовая страница</title>
+    <title>ЛК клиента</title>
     <link rel="stylesheet" href="/css/common_for_lc_style.css"/>
     <link rel="stylesheet" href="/css/client_catalog_products_style.css"/>
    <link
@@ -18,21 +18,17 @@
       <header>
         <div class="header-container">
           <a href="#" class="branding">
-            <img
-              src="imeg/label.png"
-              alt="logo"
-              style="width: 100px; height: 100px; border-radius: 50%"
-            />
+            <img class="img-logo" src="imeg/label.png" alt="logo"/>
           </a>
 
           <nav class="navigation">
             <a href="#">Новый заказ</a>
-            <a href="#">Чат с менеджером</a>
+            <a href="client_chat.html">Чат с менеджером</a>
           </nav>
 
           <a href="#" class="notifications">Корзина</a>
 
-          <button class="auth-button">Профиль</button>
+          <button class="auth-button">Выйти</button>
         </div>
       </header>
 
@@ -62,11 +58,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <img
-                  src="imeg/label.png"
-                  alt="logo"
-                  style="width: 100px; height: 100px; border-radius: 50%"
-                />
+                <img class="img-logo" src="imeg/label.png" alt="logo"/>
                 <a href="#" class="href-footer">РЯЗАНСКИЙ ТРУБНЫЙ ЗАВОД</a>
               </div>
               <div class="col-md-4">
