--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Стартовая страница</title>
+    <title>РТЗ главная</title>
     <link rel="stylesheet" href="/css/main_style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -17,11 +17,7 @@
       <header>
         <div class="header-container">
           <a href="#" class="branding">
-            <img
-              src="/imeg/label.png"
-              alt="logo"
-              style="width: 100px; height: 100px; border-radius: 50%"
-            />
+            <img class="img-logo" src="imeg/label.png" alt="logo"/>
             <h3 id="org-name">Рязанский Трубный Завод</h3>
           </a>
           <nav class="navigation">
@@ -263,11 +259,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <img
-                  src="/imeg/label.png"
-                  alt="logo"
-                  style="width: 100px; height: 100px; border-radius: 50%"
-                />
+                <img class="img-logo" src="imeg/label.png" alt="logo"/>
                 <a href="#" class="href-footer">РЯЗАНСКИЙ ТРУБНЫЙ ЗАВОД</a>
               </div>
               <div class="col-md-4">
