--- a/src/main/resources/static/manager_main.html
+++ b/src/main/resources/static/manager_main.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ЛК кладовщика</title>
+  <title>ЛК менеджера</title>
   <link rel="stylesheet" href="/css/common_for_lc_style.css"/>
-  <link rel="stylesheet" href="/css/storekeeper_create_product_details.css" />
+  <link rel="stylesheet" href="/css/general_profile_style.css" />
   <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -23,10 +23,10 @@
 
       <nav class="navigation">
         <a href="storekeeper_create_product.html">Регистрация товара</a>
-        <a href="in_development.html">Публикация новости</a>
+        <a href="#">Публикация новости</a>
       </nav>
 
-      <a href="in_development.html" class="notifications">Уведомления</a>
+      <a href="#" class="notifications">Уведомления</a>
 
       <button class="auth-button">Выйти</button>
     </div>
@@ -43,30 +43,66 @@
     </div>
 
     <div class="content">
-
-
-      <form id="productForm">
-        <label for="name">Наименование:</label>
-        <input type="text" id="name" name="name" placeholder="Название товара">
-
-        <div>
-          <input type="radio" id="rolledName" name="category" value="rolledName">
-          <label for="rolledName">Прокат</label>
+      <div id="individualForm">
+        <div class="row mb-3">
+          <div class="col">
+            <!-- Блок для загрузки фото -->
+            <div class="upload-container">
+              <span class="upload-text">Загрузить фото/лейбл</span>
+              <input type="file" accept="image/*" id="img" />
+            </div>
+          </div>
+          <div class="col">
+            <!-- Блок для логина -->
+            <div id="dataLogin">Здесь должен отображаться логин...</div>
+          </div>
         </div>
-        <div>
-          <input type="radio" id="typeName" name="category" value="typeName">
-          <label for="typeName">Тип товара</label>
+        <div class="row mb-3">
+          <div class="col">
+            <div class="input-container">
+              <label for="textInput"></label>
+              <input type="text" id="lastName" placeholder="Фамилия:" />
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-container">
+              <label for="textInput"></label>
+              <input type="text" id="firstName" placeholder="Имя:" />
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-container">
+              <label for="textInput"></label>
+              <input
+                      type="text"
+                      id="patronymic"
+                      placeholder="Отчество:"
+              />
+            </div>
+          </div>
         </div>
-        <div>
-          <input type="radio" id="standardName" name="category" value="standardName">
-          <label for="standardName">Стандарт</label>
+        <div class="row mb-3">
+          <div class="col">
+            <div class="input-container">
+              <label for="textInput"></label>
+              <input type="text" id="inn" placeholder="ИНН:" />
+            </div>
+          </div>
         </div>
-        <div>
-          <input type="radio" id="steelGradeName" name="category" value="steelGradeName">
-          <label for="steelGradeName">Марка Стали</label>
+        <div class="row mb-3">
+          <div class="col">
+            <div id="dataPhone">Здесь должен отображаться телефон...</div>
+          </div>
+          <div class="col">
+            <div id="dataEmail">Здесь должена отображаться почта...</div>
+          </div>
         </div>
-        <button type="submit">Сохранить</button>
-      </form>
+        <div class="row mb-3">
+          <div class="col">
+            <button type="button" id="saveButtonPerson">Сохранить</button>
+          </div>
+        </div>
+      </div>
 
     </div>
   </main>
@@ -105,7 +141,7 @@
     </footer>
   </footer>
 </div>
-<script src="/js/storekeeper_create_product_details.js"></script>
+<script src="/js/storekeeper_main.js"></script>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
