product_and_crud

--- a/src/main/resources/static/client_catalog_products.html
+++ b/src/main/resources/static/client_catalog_products.html
@@ -22,7 +22,7 @@
           </a>
 
           <nav class="navigation">
-            <a href="#">Новый заказ</a>
+            <a href="client_order.html">Новый заказ</a>
             <a href="client_chat.html">Чат с менеджером</a>
           </nav>
 
@@ -34,10 +34,10 @@
 
       <main>
         <div class="sidebar">
-          <a href="#">Профиль</a>
+          <a href="client_main.html">Профиль</a>
           <a href="#">Заказы</a>
           <a href="#">Счета</a>
-          <a href="#">Каталог</a>
+          <a href="client_catalog_products.html">Каталог</a>
           <a href="#">Календарь поставок</a>
           <a href="#">Новости</a>
         </div>
