--- a/src/main/resources/static/manager_main.html
+++ b/src/main/resources/static/manager_main.html
@@ -22,7 +22,7 @@
       </a>
 
       <nav class="navigation">
-        <a href="storekeeper_create_product.html">Регистрация товара</a>
+        <a href="--------------------.html">Чаты с клиентами</a>
         <a href="#">Публикация новости</a>
       </nav>
 
@@ -34,11 +34,13 @@
 
   <main>
     <div class="sidebar">
-      <a href="storekeeper_main.html">Профиль</a>
-      <a href="storekeeper_storage.html">Склад</a>
+      <a href="manager_main.html">Профиль</a>
+      <a href="#">Заказы</a>
+      <a href="#">Счета</a>
+      <a href="-----------.html">Склад</a>
       <a href="#">Контрагенты</a>
       <a href="#">Сотрудники</a>
-      <a href="#">Календарь отгрузок</a>
+      <a href="#">Календарь оплат</a>
       <a href="#">Новости</a>
     </div>
 
