--- a/src/main/resources/static/client_order.html
+++ b/src/main/resources/static/client_order.html
@@ -22,7 +22,7 @@
           </a>
 
           <nav class="navigation">
-            <a href="#">Новый заказ</a>
+            <a href="client_order.html">Новый заказ</a>
             <a href="client_chat.html">Чат с менеджером</a>
           </nav>
 
