--- a/src/main/resources/static/storekeeper_product_card.html
+++ b/src/main/resources/static/storekeeper_product_card.html
@@ -42,6 +42,130 @@
     </div>
 
     <div class="content">
+      <!-- TODO убрать возможность поменять здесь тип прокат марку стали и стандарт  -->
+      <div class="container mt-4">
+
+        <!-- Первый блок: Заголовок с id="name" -->
+        <h1 id="name"></h1>
+
+        <!-- Второй блок: Два вертикальных блока -->
+        <div class="row">
+
+          <!-- Левый блок -->
+          <div class="col-md-6">
+
+            <!-- Первый горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Прокат:</label>
+              <div class="col-sm-8">
+                <span id="rolledName"></span>
+              </div>
+            </div>
+
+            <!-- Второй горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Тип:</label>
+              <div class="col-sm-8">
+                <span id="typeName"></span>
+              </div>
+            </div>
+
+            <!-- Третий горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Цена от</label>
+              <div class="col-sm-6">
+                <span id="pricePerTon"></span>
+              </div>
+              <div class="col-sm-2">
+                <span>р/т</span>
+              </div>
+            </div>
+
+            <!-- Четвертый горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Цена от</label>
+              <div class="col-sm-6">
+                <span id="pricePerMeter"></span>
+              </div>
+              <div class="col-sm-2">
+                <span>р/м</span>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Правый блок -->
+          <div class="col-md-6">
+
+            <!-- Первый горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Стандарт:</label>
+              <div class="col-sm-8">
+                <span id="standardName"></span>
+              </div>
+            </div>
+
+            <!-- Второй горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Марка стали:</label>
+              <div class="col-sm-8">
+                <span id="steelGradeName"></span>
+              </div>
+            </div>
+
+            <!-- Третий горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Размер:</label>
+              <div class="col-sm-8">
+                <span id="size"></span>
+              </div>
+            </div>
+
+            <!-- Четвертый горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Длина:</label>
+              <div class="col-sm-6">
+                <span id="length"></span>
+              </div>
+              <div class="col-sm-2">
+                <span>мм</span>
+              </div>
+            </div>
+
+            <!-- Пятый горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Толщина:</label>
+              <div class="col-sm-6">
+                <span id="thickness"></span>
+              </div>
+              <div class="col-sm-2">
+                <span>мм</span>
+              </div>
+            </div>
+
+            <!-- Шестой горизонтальный блок -->
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">Вес:</label>
+              <div class="col-sm-6">
+                <span id="weight"></span>
+              </div>
+              <div class="col-sm-2">
+                <span>кг</span>
+              </div>
+            </div>
+
+          </div> <!-- Конец правого блока -->
+
+        </div> <!-- Конец второго блока -->
+
+        <!-- Третий блок: Кнопка "Изменить" -->
+        <div class="mt-3">
+          <button id="editButton" class="btn btn-primary">Изменить</button>
+        </div>
+
+      </div> <!-- Конец контейнера -->
+
+
 
 
 
@@ -82,7 +206,7 @@
     </footer>
   </footer>
 </div>
-<script src="/js/storekeeper_storage.js"></script>
+<script src="/js/storekeeper_product_card.js"></script>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
