--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -1,106 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Регистрация</title>
-    <link rel="stylesheet" href="/css/registration_style.css" />
+    <link rel="stylesheet" href="/css/registration_style.css"/>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
     />
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
+</head>
+<body>
+<div class="wrapper">
+    <header>
         <div class="header-container">
-          <a href="main.html" class="branding">
-            <img class="img-logo" src="imeg/label.png" alt="logo"/>
-            <h3 id="org-name">Рязанский Трубный Завод</h3>
-          </a>
-        </div>
-      </header>
-
-      <main>
-        <div class="registration-form">
-          <h1>Регистрация</h1>
-          <form id="signup-form">
-            <div class="input-group">
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-<!--            <div class="input-group">-->
-<!--              <label for="username">Логин:</label>-->
-<!--              <input type="text" id="username" name="username" required />-->
-<!--            </div>-->
-            <div class="input-group">
-              <label for="password">Пароль:</label>
-              <input type="password" id="password" name="password" required />
-              <button type="button" id="toggle-password">Показать</button>
-            </div>
-            <div class="input-group">
-              <label for="phone">Телефон:</label>
-              <input
-                type="tel"
-                id="phone"
-                name="phone"
-                placeholder="+7"
-                required
-              />
-            </div>
-            <button type="submit" class="submit-btn">Продолжить</button>
-          </form>
-          <p>Нажимая кнопку «Продолжить», вы принимаете условия</p>
-          <p><a href="in_development.html">Пользовательского соглашения</a></p>
-          <p>
-            Уже зарегистрированы? <a href="main.html">Войти</a> или
-            <a href="in_development.html">Восстановить пароль</a>
-          </p>
-        </div>
-      </main>
-
-      <footer>
-        <footer class="footer">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
+            <a href="main.html" class="branding">
                 <img class="img-logo" src="imeg/label.png" alt="logo"/>
-                <a href="main.html" class="href-footer">РЯЗАНСКИЙ ТРУБНЫЙ ЗАВОД</a>
-              </div>
-              <div class="col-md-4">
-                <h5>Контакты</h5>
-                <p>Телефон: +7 (4912) 45-50-00</p>
-                <p>Email: zakaz-ryazan@</p>
-              </div>
-              <div class="col-md-4">
-                <h5>Адрес</h5>
-                <p>390011, г. Рязань, Южный Промузел, 6, стр. 36, оф. 100</p>
-              </div>
-            </div>
-            <div class="line"></div>
-            <div class="footer-bottom">
-              <div>
-                <p>© 2024. Все права защищены</p>
-              </div>
-              <div>
-                <a href="in_development.html" class="href-footer">Политика конфиденциальности</a>
-              </div>
-              <div>
-                <a href="in_development.html" class="href-footer">Пользовательское соглашение</a>
-              </div>
-            </div>
-          </div>
-        </footer>
-      </footer>
-    </div>
+                <h3 id="org-name">Рязанский Трубный Завод</h3>
+            </a>
+        </div>
+    </header>
 
-    <script src="/js/registration_script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <main>
+
+        <div class="registration-form">
+            <h1>Регистрация</h1>
+
+            <form id="signup-form">
+                <div class="input-group">
+
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required/>
+
+                </div>
+                <div class="input-group">
+
+                    <label for="username">Логин:</label>
+                    <input type="text" id="username" name="username" required/>
+
+                </div>
+                <div class="input-group">
+
+                    <label for="password">Пароль:</label>
+                    <input type="password" id="password" name="password" required/>
+                    <button type="button" id="toggle-password">Показать</button>
+
+                </div>
+                <div class="input-group">
+
+                    <label for="phone">Телефон:</label>
+                    <input
+                            type="tel"
+                            id="phone"
+                            name="phone"
+                            placeholder="+7"
+                            required
+                    />
+                </div>
+
+                <button id="saveUser" type="submit" class="submit-btn">Зарегистрироваться</button>
+            </form>
+
+            <p>Нажимая кнопку «Зарегистрироваться», вы принимаете условия</p>
+            <p><a href="in_development.html">Пользовательского соглашения</a></p>
+            <p>
+                Уже зарегистрированы? <a href="main.html">Войти</a> или
+                <a href="in_development.html">Восстановить пароль</a>
+            </p>
+
+        </div>
+
+    </main>
+
+    <footer>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="img-logo" src="imeg/label.png" alt="logo"/>
+                        <a href="main.html" class="href-footer">РЯЗАНСКИЙ ТРУБНЫЙ ЗАВОД</a>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Контакты</h5>
+                        <p>Телефон: +7 (4912) 45-50-00</p>
+                        <p>Email: zakaz-ryazan@</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Адрес</h5>
+                        <p>390011, г. Рязань, Южный Промузел, 6, стр. 36, оф. 100</p>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="footer-bottom">
+                    <div>
+                        <p>© 2024. Все права защищены</p>
+                    </div>
+                    <div>
+                        <a href="in_development.html" class="href-footer">Политика конфиденциальности</a>
+                    </div>
+                    <div>
+                        <a href="in_development.html" class="href-footer">Пользовательское соглашение</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </footer>
+</div>
+
+<script src="/js/registration_script.js"></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"
+></script>
+</body>
 </html>
