--- a/src/main/resources/static/storekeeper_main.html
+++ b/src/main/resources/static/storekeeper_main.html
@@ -38,7 +38,7 @@
       <a href="storekeeper_storage.html">Склад</a>
       <a href="#">Контрагенты</a>
       <a href="#">Сотрудники</a>
-      <a href="#">Календарь отгрузок</a>
+      <a href="#">Календарь отгрузок/поставок</a>
       <a href="#">Новости</a>
     </div>
 
