--- a/src/main/resources/static/client_main.html
+++ b/src/main/resources/static/client_main.html
@@ -19,7 +19,7 @@
                 <img class="img-logo" src="imeg/label.png" alt="logo"/>
             </a>
             <nav class="navigation">
-                <a href="client_order.html">Новый заказ</a>
+                <a href="client_chat_bot.html">ЧАТ-БОТ</a>
                 <a href="client_chat.html">Чат с менеджером</a>
             </nav>
             <a href="client_basket.html" class="notifications">Корзина</a>
